# registration-test

./: config.py  pyproject.toml  serve.sh  sqlite.py  wsgi.py
db/: test.sqlite
static/: style.css
templates/: base.html  index.html  login-results.html  login.html  registration-failure.html  registration-success.html  registration.html  service-message.html
