[tool.poetry]
name = "registration-test"
version = "0.1.0"
description = ""
authors = ["Savchenko Dmitriy"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.7"
flask = "*"
hiredis = "*"
requests = "*"
markupsafe = "*"
Flask-sqlalchemy = "*"
Flask-Login = "*"
Flask-migrate = "*"
Flask-wtf = "*"

[tool.poetry.dev-dependencies]

[virtualenvs]
in-project = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
